Fix paths and layout issues

--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,7 @@ header .menu-icon {
   height: 350px;
   position: absolute;
   right: 40%;
-  bottom:25%;
+  bottom:20%;
 }
 .counters {
   display: flex;
